# Web-Dev

Lab10/hh_back/: db.sqlite3
Lab10/hh_front/: angular.json  package-lock.json
Lab2/backend/: README.md  pyproject.toml
Lab2/backend/src/: db.sqlite3
Lab2/backend/src/app/: settings.py  urls.py
Lab2/backend/src/auth_app/: serializers.py  urls.py  views.py
Lab2/facebook/: index.html  style.css
Lab2/instagram/: style.css
Lab2/microsoft/: gamepa.avif  index.html  style.css
Lab6/: package-lock.json  package.json  tsconfig.app.json  tsconfig.spec.json
Lab9/hh_back/: db.sqlite3
khanacademy/: AClassyGallery.html  ApplesAndBananas.html  Blog.html  ClassesOfElements.html  ColorfullCreature.html  DescendantsOfKhan.html  EventInvite.html  FamousFontFormats.html  FancyFontFamilies.html  FloatingClouds.html  GreatBigFontSizes.html  GroupTheGroupers.html  GroupedAnimals.html  JumpArounf.html  LinksForLearning.html  PicPerfTip.html  PositionPlanet.html  RecipeBook.html  SeasonalIds.html  TheBoxerModel.html  TheDinnerTable.html  TheOverflowingOcean.html  TravelWebPage.html  Wishlist.html  WriteAPoem.html  YouCanLearnTextTags.html
lab3/: HelloWorld.html  task1variable.js  task2variable.js
microsoft/: index (2).html
w3schools/: 10.html  11_quotations1.html  12.html  13_1.html  13_3.html  13_4.html  13_colors2.html  14_css2.html  15_1.html  15_2.html  16_1.html  16_2.html  16_4.html  16_images3.html  19_1.html  19_4.html  19_5.html  19_6.html  19_tables2.html  20_1.html  21.html  22.html  23.html  4.html  5.html  6_attributes1.html  7.html  8.html  9_1.html  9_2.html
(+553 files in other folders)
